Replace List.copyOf with Collections.unmodifiableList for better performance